inference-simulator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vllm-llama3-8b-instruct
spec:
  replicas: 2
  selector:
    matchLabels:
      app: vllm-llama3-8b-instruct
  template:
    metadata:
      labels:
        app: vllm-llama3-8b-instruct
    spec:
      containers:
        - args:
            - --model
            - meta-llama/Llama-3.1-8B-Instruct
          image: ghcr.io/llm-d/llm-d-inference-sim:v0.6.1
          name: vllm-sim
